Reduce header font size slightly to prevent wrapping

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -166,7 +166,7 @@ footer
 		height: 22vw
 
 		h1
-			font-size: 8vw
+			font-size: 7vw
 
 	.module
 		.header
